feat(halls): add pagination, search, filtering, and sorting